--- a/html.html
+++ b/html.html
@@ -62,7 +62,7 @@ border="1px"        = tablo çizgileri ve kalınlığı <br/>
 < th> < /th>        = başlık eki (thead ve tfoot içerisinde) <br/>
 < tr> < /tr>        = satır oluşturma (tbody içerisinde) <br/>
 < td> < /td>        = sütun oluşturma (satır içerisinde) <br/>
-colspan="2"         = sütun birleştirme (yazıyı ortalama) <br/>
+colspan="2"         = sütun birleştirme <br/>
 align="left-right"  = satır içi hizalama <br/>
 <br/>
 
