--- a/html.html
+++ b/html.html
@@ -259,6 +259,22 @@
             <li>< input placeholder="..."/> = metin kutusu önizleme açıklaması </li>
         </ol>
         <br/>
+        <ol>
+        <input name="" placeholder="name"/><br/>
+        <br/>
+        <input id="" placeholder="id"/><br/>
+        <br/>
+        <input class="" placeholder="class"/><br/>
+        <br/>
+        <input style="" placeholder="style"/><br/>
+        <br/>
+        <input lang="" placeholder="lang"/><br/>
+        <br/>
+        <input value="" placeholder="value"/><br/>
+        <br/>
+        <input type="" placeholder="type"/><br/>
+        <br/>
+        </ol>
         <html>
             <head>
             </head>
@@ -277,9 +293,9 @@
                                 <input type="email"/> </li><br/>
                             <li>Sayısal Değer Giriş Alanı (yaş vb.) 
                                 <input type="number"/> </li><br/>
-                            <li>İşaretleme (kare) 
+                            <li>İşaretleme (kare - çoklu seçim) 
                                 <input type="checkbox"/> </li><br/>
-                            <li>İşaretleme (daire) 
+                            <li>İşaretleme (daire - tekli ve çoklu seçim) 
                                 <input type="radio"/> </li><br/>
                             <li>Formun (girilen verilerin) Gönderilmesi 
                                 <input type="submit"/> </li><br/>
