--- a/html.html
+++ b/html.html
@@ -251,7 +251,7 @@
             <li>< form> < /form>            = verilerin gönderilip/alınabilmesi için kullanılır </li>
             <li>< input id="..."/>          = eşsiz kimliğini belirtir </li>
             <li>< input class="..."/>       = sınıf adını belirtir </li>
-            <li>< input style="..."/>       = CSS kuralları tanımlar </li>
+            <li>< input style/>             = CSS kuralları tanımlar </li>
             <li>< input lang="..."/>        = içerdiği metnin lisanını belirtir </li>
             <li>< input name="..."/>        = kontrolün ismini belirtir </li>
             <li>< input value="..."/>       = girilen verileri kaydetme ve otomatik tamamlama </li>
@@ -266,7 +266,7 @@
         <br/>
         <input class="" placeholder="class"/><br/>
         <br/>
-        <input style="" placeholder="style"/><br/>
+        <input style/>
         <br/>
         <input lang="" placeholder="lang"/><br/>
         <br/>
