div + span added

--- a/html.html
+++ b/html.html
@@ -103,6 +103,11 @@
             <li>Yorum satırı = < !-- --> (comment) </li>
             <li>Paragraf = < p>
                     < /p> (pharagraph) </li>
+            <li>Gruplama (blok) = < div>
+                    < /div>
+            <li>Gruplama (satır içi) = < span>
+                    < /span></li>
+            </li>
             <li>Bağlantı = < a>
                     < /a> (link) </li>
             <li>Resim =
