--- a/html.html
+++ b/html.html
@@ -105,8 +105,9 @@
                     < /p> (pharagraph) </li>
             <li>Gruplama (blok) = < div>
                     < /div>
+            </li>
             <li>Gruplama (satır içi) = < span>
-                    < /span></li>
+                    < /span>
             </li>
             <li>Bağlantı = < a>
                     < /a> (link) </li>
