--- a/html.html
+++ b/html.html
@@ -94,6 +94,11 @@
                     < /sup>
             </li>
             <li><mark>İşaretleme</mark></li>
+            <li>Bağlantı = < a>
+                    < /a> (link) </li>
+            <li>Resim =
+                < img />
+            </li>
             <li>Satır atlama =
                 < br>
             </li>
@@ -109,11 +114,8 @@
             <li>Gruplama (satır içi) = < span>
                     < /span>
             </li>
-            <li>Bağlantı = < a>
-                    < /a> (link) </li>
-            <li>Resim =
-                < img />
-            </li>
+            <li>Html içinde html paylaşma = < iframe>
+                    < /iframe> </li>
             <h4>EMMET EKLENTİSİ</h4>
             <li>Kısaltma Örneği = ol>(li>a)*3 + tab</li>
             <li>Belirtilen kelime sayısında rastgele metin oluşturma = lorem20 + tab</li>
