--- a/css-descriptions.html
+++ b/css-descriptions.html
@@ -40,8 +40,10 @@
     <p>
     <ul>
         <li>
-            <b>< style>
-                < /style></b> etiketleriyle oluşturulur.
+            <b>
+                < style>
+                    < /style>
+            </b> etiketleriyle oluşturulur.
         </li>
         <li>Yapısı şu şekildedir ; <b>seçici {özellik:değer; özellik2:değer}</b> body {color:blueviolet} gibi</li>
         <li>Oluşturulmuş <u>id'yi seçmek için</u> <b>#id adı</b> yazılır.</li>
@@ -54,5 +56,7 @@
         </p>
     </details>
 </body>
+<footer>
+</footer>
 
 </html>
