--- a/css-descriptions.html
+++ b/css-descriptions.html
@@ -41,9 +41,8 @@
     <ul>
         <li>
             <b>
-                < style>
-                    < /style>
-            </b> etiketleriyle oluşturulur.
+                < style></style>
+            </b> etiketiyle oluşturulur.
         </li>
         <li>Yapısı şu şekildedir ; <b>seçici {özellik:değer; özellik2:değer}</b> body {color:blueviolet} gibi</li>
         <li>Oluşturulmuş <u>id'yi seçmek için</u> <b>#id adı</b> yazılır.</li>
