--- a/css-examples.html
+++ b/css-examples.html
@@ -24,7 +24,8 @@
 
         .paragraf {
             color: orangered;
-            text-decoration: line-through
+            text-decoration: line-through;
+            font-size: 40px !important;
         }
 
         #aciklama {
@@ -43,5 +44,8 @@
     <p class="paragraf">Paragraf 2</p>
     <p id="aciklama">Bu bir açıklama satırıdır, burada sonuçlar yer alır.</p>
 </body>
+
+<footer>
+</footer>
 
 </html>
