--- a/CSS/css-descriptions.html
+++ b/CSS/css-descriptions.html
@@ -16,10 +16,12 @@
             Text-decoration
             Font-size
             Border-color
+            opacity
         Genel Seçici
     </style>
 </head>
 -->
+
 <!DOCTYPE html>
 <html lang="tr">
 
@@ -111,7 +113,8 @@
             <li>Yapısı şu şekildedir ; <b>seçici {özellik:değer; özellik2:değer}</b> body {color:blueviolet} gibi.</li>
             <li>Oluşturulmuş <u>id'yi seçmek için</u> <b>#id adı</b> yazılır.</li>
             <li>Oluşturulmuş <u>class'ı seçmek için</u> <b>.class adı</b> yazılır.</li>
-            <li>Değerden sonra girilen !important tagi seçili attribute'e verilen değeri diğer genel tanımlamalardan
+            <li>Değerden sonra girilen <b>!important</b> tagi seçili attribute'e verilen değeri diğer genel
+                tanımlamalardan
                 üstün
                 kılar. <br>
                 <b>#ilkparagraf</b> yada <b>.ilkbaşlıkparagrafları {font-size: 40px!important;}</b> gibi.
@@ -120,6 +123,19 @@
         </p>
     </details> <br>
 
+    <details CSS STİLLERİ>
+        <summary><b>CSS STİLLERİ</b></summary>
+        <ol>
+            <details Background>
+                <summary><b>Background</b></summary> <br>
+                <ul type="disc">
+                    <li><b>background-image:</b> <i>url ("")</i></li>
+                    <li><b>background-repeat:</b> <i>repeat / no-repeat / repeat X (yatay) / repeat Y (dikey)</i></li>
+                    <li><b>background-color:</b> <i>renk adı / kodu</i></li>
+                </ul>
+            </details>
+        </ol>
+    </details>
 </body>
 <footer>
 </footer>
