--- a/CSS/css-descriptions.html
+++ b/CSS/css-descriptions.html
@@ -11,8 +11,11 @@
                 rel     = ilişiği bulunduğu dosya türünü belirtme (stylesheet)
                 href    = dosya yolunu belirtme (style.css)
         Tags
+            backround
+                Backround-image
+                Backround-repeat
+                Background-color
             Color
-            Background-color
             Text-decoration
             Font-size
             Border-color
