text, link added

--- a/CSS/css-examples.html
+++ b/CSS/css-examples.html
@@ -9,10 +9,22 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <style>
+        #p1 {
+        }
+
+        a:hover {
+            color:pink
+        }
     </style>
 </head>
 
 <body>
+    <p id="p1">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Saepe impedit blanditiis non fugit soluta rem
+        architecto deserunt tempora excepturi ratione tempore in quibusdam ducimus dicta veritatis, dolores ad nulla
+        labore facere culpa qui voluptatem rerum unde? Sed, aspernatur reprehenderit facilis cum modi accusamus incidunt
+        earum. Nam suscipit dolores qui excepturi.</p>
+
+    <a href="">google</a>
 </body>
 
 <footer>
