--- a/CSS/css-descriptions.html
+++ b/CSS/css-descriptions.html
@@ -6,20 +6,15 @@
             class   = birden fazla elementin özellikleri değiştirilmek istenirse kullanılır.
             body    = tüm gövde kısmı üzerinde değişiklikler yapmak için
             p       = paragraf kısmı üzerinde değişiklikler yapmak için
+            a       = linkler üzerinde değişiklikler yapmak için
             span    = span kısmı üzerinde değişiklikler yapmak için
             link    = dosya yoluna yönlendirme
                 rel     = ilişiği bulunduğu dosya türünü belirtme (stylesheet)
                 href    = dosya yolunu belirtme (style.css)
         Tags
             backround
-                Backround-image
-                Backround-repeat
-                Background-color
-            Color
-            Text-decoration
-            Font-size
-            Border-color
-            opacity
+            text
+            link
         Genel Seçici
     </style>
 </head>
@@ -130,12 +125,58 @@
         <summary><b>CSS STİLLERİ</b></summary>
         <ol>
             <details Background>
-                <summary><b>Background</b></summary> <br>
+                <summary><b>Background</b></summary>
+                <p>
                 <ul type="disc">
                     <li><b>background-image:</b> <i>url ("")</i></li>
-                    <li><b>background-repeat:</b> <i>repeat / no-repeat / repeat X (yatay) / repeat Y (dikey)</i></li>
+                    <li><b>background-repeat:</b> <i>repeat, no-repeat, repeat X (yatay), repeat Y (dikey)</i></li>
                     <li><b>background-color:</b> <i>renk adı / kodu</i></li>
                 </ul>
+                </p>
+            </details>
+            <details Text>
+                <summary><b>Text</b></summary>
+                <p>
+                <ul type="disc">
+                    <li><b>Color: </b><i>renk adı, kodu, rgb kodu</i></li>
+                    <li><b>Text-align: </b><i>left, right, center, justify, start, end, inherit, match-parent</i></li>
+                    <li><b>Text-decoration: </b><i>none</i></li>
+                    <li><b>Text-transform: </b><i>none, lowercase, uppercase, capitalize, full-width, full-size-kana,
+                            inherit</i></li>
+                    <li><b>Text-indent: </b><i>50px, 10%</i> (paragraf girişi)</li>
+                    <li><b>Line-height: </b><i>25px</i> (satırlar arası boşluk)</li>
+                    <li><b>Letter-spacing: </b><i>1px</i></li>
+                    <li><b>Word-spacing: </b><i>5px</i></li>
+                </ul>
+                </p>
+            </details>
+            <details Link>
+                <summary><b>Link</b></summary>
+                <p>
+                <ul type="disc">
+                    <li><b>a:visited</b> <i> {color: renk}</i> (önceden ziyaret edildiğindeki renk)</li>
+                    <li><b>a:link</b> <i> {color: renk}</i> (normal link rengi)</li>
+                    <li><b>a:hover</b> <i> {color: renk}</i> (üzerine gelindiğindeki renk)</li>
+                    <li><b>a:active</b> <i> {color: renk}</i> (tıklandığındaki renk)</li>
+                </ul>
+                </p>
+            </details>
+            <details Yeni Konu>
+                <summary><b>Yeni Konu</b></summary>
+                <p>
+                    <ul>
+                        <li><b></b><i></i></li>
+                        <li><b></b><i></i></li>
+                        <li><b></b><i></i></li>
+                        <li><b></b><i></i></li>
+                        <li><b></b><i></i></li>
+                        <li><b></b><i></i></li>
+                        <li><b></b><i></i></li>
+                        <li><b></b><i></i></li>
+                        <li><b></b><i></i></li>
+                        <li><b></b><i></i></li>
+                    </ul>
+                </p>
             </details>
         </ol>
     </details>
